# libbladerf-native-rs

./: Cargo.toml  README.md  shell.nix
src/: lib.rs
src/nios/: mod.rs  nios_access.rs  nios_access_vanilla  nios_dummy.rs
src/nios/packet/: mod.rs  pack_8x16.rs  pack_8x8.rs  pkt_16x64.rs  pkt_32x32.rs  pkt_8x16.rs  pkt_8x32.rs  pkt_8x64.rs  pkt_8x8.rs  pkt_retune.rs
src/usb/: mod.rs  nusb.rs
tests/: basic.rs
